# backend

./: .gitignore  Makefile
gateway/: Dockerfile  (+3 more)
services/content-service/: Cargo.toml  Dockerfile  Makefile  build.rs
services/content-service/proto/: content.proto
services/content-service/src/: config.rs  main.rs
services/content-service/src/cloudinary/: client.rs  config.rs  error.rs  mod.rs  transformations.rs  types.rs
services/content-service/src/grpc/: mod.rs  server.rs
services/content-service/src/handlers/: content_handler.rs  health_handler.rs  media_handler.rs  mod.rs
services/content-service/src/kafka/: producer.rs
services/content-service/src/middleware/: auth.rs  mod.rs
services/content-service/src/models/: content.rs
services/content-service/src/repositories/: content_repo.rs  mod.rs
services/content-service/src/services/: content_service.rs  mod.rs
services/payment-service/: Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
services/payment-service/alembic/: env.py
services/payment-service/app/: config.py  database.py  entitlements.py  main.py
services/payment-service/app/grpc/: __init__.py  server.py
services/payment-service/app/kafka/: __init__.py  consumer.py  producer.py
services/payment-service/app/middleware/: auth.py
services/payment-service/app/models/: __init__.py  base.py  subscription.py  transaction.py
services/payment-service/app/repositories/: __init__.py  transaction_repo.py
services/payment-service/app/routers/: __init__.py  health.py  payments.py  subscriptions.py  transactions.py
(+164 files in other folders)
