[package]
name = "content-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
thiserror = "1"
sanitize-filename = "0.5"
reqwest = { version = "0.12", features = ["json"] }
sha1 = "0.10"
hex = "0.4"
urlencoding = "2"
jsonwebtoken = "9"

[build-dependencies]
tonic-build = "0.11"
